--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+  width: 100%;
+  height: 100vh;
 }
 
 a {
@@ -16,22 +13,4 @@ a {
 
 h1 {
   font-size: 25px;
-}
-
-.logo {
-  width: 42px;
-  height: 42px;
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
 }
